--- a/source/scss/base/variables.scss
+++ b/source/scss/base/variables.scss
@@ -4,4 +4,5 @@ $yellow: #ffe600;
 
 $textPrimary: #707070;
 
-$font-default: 'Oswald', sans-serif;
+$font-default: 'Oswald';
+//$font-default: 'Oswald', sans-serif;
