--- a/source/scss/base/media.scss
+++ b/source/scss/base/media.scss
@@ -4,7 +4,14 @@
 
 @media (max-width: 1200px) {}
 
-@media (max-width: 992px) {}
+@media (max-width: 992px) {
+    //services
+    .services {
+        &-column {
+            margin-bottom: 50px;
+        }
+    }
+}
 
 @media (max-width: 768px) {
     body {
@@ -33,7 +40,7 @@
                 display: block;
                 margin: 0;
                 text-align: center;
-                &:not(: last-child):after {
+                &:not(:last-child):after {
                     display: none;
                 }
                 a {
