дополнил блок Services

--- a/source/scss/base/normalize.scss
+++ b/source/scss/base/normalize.scss
@@ -2,7 +2,7 @@ html {
     font-family: $font-default;
     box-sizing: border-box;
     height: 100%;
-    width: 1920px;
+//    width: 1920px;
 }
 
 body {
@@ -170,15 +170,12 @@ h6 {
 
 h1 {
     font-size: 3.071em;
-    font-weight: 100;
 }
 h2{
     font-size: 4.063em;
-    line-height: 1.2;
 }
 h3{
     font-size: 2em;
-//    font-size: 1.875em;
 }
 h4{
     font-size:  1.250em;
