--- a/source/scss/base/services.scss
+++ b/source/scss/base/services.scss
@@ -4,36 +4,77 @@
     .title {
         margin-bottom: 60px;
     }
-    &-column {
-        text-align: center;
-        .circle {
-            height: 106px;
-            width: 106px;
-            border-radius: 100%;
-            border: 1px solid transparent;
-            background: $yellow;
-            transition: 0.3s ease-out;
+    &-line-top {
+        padding-bottom: 67px;
+        .services-column {
             text-align: center;
-            line-height: 100px;
-            color: $white;
-            font-size: 2.438em;
-            margin: 0 auto 17px;
-            &:hover {
-                color: $yellow;
-                background: $white;
-                transition: 0.3s ease-in;
-                border-color: #131316;
+            .circle {
+                height: 106px;
+                width: 106px;
+                border-radius: 100%;
+                border: 1px solid transparent;
+                background: $yellow;
+                transition: 0.3s ease-out;
+                text-align: center;
+                line-height: 100px;
+                color: $white;
+                font-size: 2.438em;
+                margin: 0 auto 17px;
+                &:hover {
+                    color: $yellow;
+                    background: $white;
+                    transition: 0.3s ease-in;
+                    border-color: #131316;
+                }
+            }
+            h4 {
+                color: #131316;
+                text-transform: uppercase;
+                margin-bottom: 15px;
+            }
+            &-description {
+                font-weight: 300;
+                max-width: 280px;
+                margin: 0 auto;
             }
         }
-        h4 {
-            color: #131316;
-            text-transform: uppercase;
-            margin-bottom: 15px;
+    }
+    &-line-bottom {
+        background: #131a1d;
+        padding-top: 52px;
+        padding-bottom: 75px;
+        .title {
+            margin-bottom: 65px;
+            h3 {
+                color: $yellow;
+                margin-bottom: 12px;
+                &:after {
+                    display: none;
+                }
+            }
+            &-description {
+                color: $white
+            }
         }
-        &-description {
-            font-weight: 300;
-            max-width: 280px;
-            margin: 0 auto;
+        .services-column {
+            text-align: center;
+            color: $white;
+            i {
+                text-align: center;
+                color: $yellow;
+                font-size: 2.500em;
+                margin: 0 auto 25px;
+            }
+            h4 {
+                text-transform: uppercase;
+                margin-bottom: 19px;
+            }
+            &-description {
+                font-weight: 300;
+                max-width: 170px;
+                margin: 0 auto;
+                line-height: 20px;
+            }
         }
     }
 }
