--- a/source/scss/base/home.scss
+++ b/source/scss/base/home.scss
@@ -17,6 +17,7 @@
             max-width: 750px;
             margin: 0 auto 40px;
             color: $white;
+            line-height: 1.2;
         }
         button {
             width: 230px;
