--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -8,8 +8,6 @@
 @import "base/header.scss";
 @import "base/home.scss";
 @import "base/services.scss";
-//@import "base/team.scss";
-//@import "base/service.scss";
-//@import "base/footer.scss";
+@import "base/works.scss";
 
 
