--- a/source/scss/base/normalize.scss
+++ b/source/scss/base/normalize.scss
@@ -2,7 +2,7 @@ html {
     font-family: $font-default;
     box-sizing: border-box;
     height: 100%;
-//    width: 1920px;
+    width: 1920px;
 }
 
 body {
