--- a/source/scss/base/normalize.scss
+++ b/source/scss/base/normalize.scss
@@ -2,7 +2,7 @@ html {
     font-family: $font-default;
     box-sizing: border-box;
     height: 100%;
-    width: 1920px;
+//    width: 1920px;
 }
 
 body {
@@ -178,8 +178,8 @@ h3{
     font-size: 2em;
 }
 h4{
-    font-size:  1.250em;
+    font-size:  1.563em;
 }
 h5{
-    font-size:  1.563em;
+    font-size:  1.250em;
 }
