--- a/source/scss/base/works.scss
+++ b/source/scss/base/works.scss
@@ -47,7 +47,7 @@
             }
         }
         .tab-image {
-            display: inline-block;
+//            display: inline-block;
             width: 100%;
             max-width: 670px;
             height: 100%;
@@ -62,7 +62,7 @@
             vertical-align: top;
             padding: 0 0 0 30px;
             box-sizing: border-box;
-            h5 {
+            h4 {
                 font-weight: 500;
                 word-spacing: -3px;
                 margin-bottom: 15px;
