--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -10,5 +10,7 @@
 @import "base/services.scss";
 @import "base/works.scss";
 @import "base/about.scss";
+@import "base/contacts.scss";
+@import "base/footer.scss";
 
 
