--- a/source/scss/base/media.scss
+++ b/source/scss/base/media.scss
@@ -7,36 +7,60 @@
     .works-portfolio-line-botom {
         display: none;
     }
-    .works-pride-item{
+    .works-pride-item {
         display: inline-block;
         float: none;
     }
-//about
+    //about
     .about {
-    .title{
-    }
-    &-item {
-        text-align: center;
-        &-icon {
-            display: block;
-            margin: 0 auto 15px;
-        }
-        &-text {
-            &-title {
+        .title {}
+        &-item {
+            text-align: center;
+            &-icon {
+                display: block;
+                margin: 0 auto 15px;
             }
-            p{
+            &-text {
+                &-title {}
+                p {}
             }
         }
-    }
-        &-team{
+        &-team {
+            &-list-item {
+                display: inline-block;
+                float: none;
+                margin: 0 10px 50px;
+                width: 300px;
+            }
+        }
+        &-skills {
             &-item {
-                    display: inline-block;
-    float: none;
-    margin: 0 10px 50px;
-    width: 300px;
+                display: inline-block;
+                float: none;
             }
         }
-}
+    &-clients {
+        &-logo{
+            &-image{
+                float: none;
+                min-width: 200px;
+        }
+        }
+    }
+    }
+//contacts
+    .contacts-form{
+        input[type="email"],
+        input[type="text"]{
+            margin: 0 15px 30px;
+            max-width: 370px;
+        }
+        textarea{
+            max-width: 370px;
+            display: block;
+            margin: 0 auto 25px;
+        }
+    }
 }
 
 @media (max-width: 992px) {
@@ -129,6 +153,13 @@
                 max-width: 400px;
                 margin: 0 auto 50px;
             }
+        }
+    }
+//contacts
+    .contacts-form{
+        input[type="email"],
+        input[type="text"]{
+            margin: 0 0 30px;
         }
     }
 }
