--- a/source/scss/base/media.scss
+++ b/source/scss/base/media.scss
@@ -162,6 +162,11 @@
             margin: 0 0 30px;
         }
     }
+//    about
+    .about-team-list-item .about-team-item-description{
+        padding-top: 20px;
+            height: 360px;
+    }
 }
 
 @media screen and (max-width: 480px) {}
