--- a/source/scss/base/about.scss
+++ b/source/scss/base/about.scss
@@ -3,7 +3,7 @@
     .title {
         margin-bottom: 90px;
     }
-    .about-team-item-user-active {
+        .about-user-active {
         &:after {
             display: block;
             content: "";
@@ -14,10 +14,6 @@
             border-bottom: 18px solid #131316;
             position: absolute;
             margin: 42px 0 0 108px;
-            transition: .3s ease;
-        }
-        .about-team-item-hide {
-            display: block;
             transition: .3s ease;
         }
     }
@@ -50,108 +46,7 @@
             }
         }
     }
-//    &-team {
-//        background: #fbfbfb;
-//        padding-top: 50px;
-//        .title {
-//            margin-bottom: 55px;
-//            h3 {
-//                margin-bottom: 15px;
-//                &:after {
-//                    display: none;
-//                }
-//            }
-//        }
-//        &-item {
-//            position: static;
-//            &-user {
-//                text-align: center;
-//                text-transform: uppercase;
-//                background: $white;
-//                border-bottom: 2px solid #e1e6e6;
-//                position: static;
-//                margin-bottom: 55px;
-//                &-photo {
-//                    display: block;
-//                    width: 270px;
-//                    height: 250px;
-//                    overflow: hidden;
-//                    margin-bottom: 10px;
-//                    background-size: cover;
-//                    background-position: top center;
-//                    background-repeat: no-repeat;
-//                }
-//                h4 {
-//                    color: $yellow;
-//                    margin-bottom: 5px;
-//                    display: inline-block;
-//                    transition: .4s ease;
-//                    &:hover {
-//                        transform: scale(1.1);
-//                        transition: .4s ease;
-//                    }
-//                }
-//                p {
-//                    margin-bottom: 10px;
-//                }
-//                .about-team-item-hide {
-//                    background: #131316;
-//                    height: 300px;
-//                    position: absolute;
-//                    left: 0;
-//                    right: 0;
-//                    top: auto;
-//                    margin-top: 60px;
-//                    padding-top: 65px;
-//                    display: none;
-//                    text-align: left;
-//                    overflow: hidden;
-//                    transition: .3s ease;
-//                    h4 {
-//                        text-transform: uppercase;
-//                        color: $yellow;
-//                        font-weight: 500;
-//                        margin-bottom: 10px;
-//                    }
-//                    p {
-//                        line-height: 25px;
-//                        color: $white;
-//                        max-width: 770px;
-//                        margin-bottom: 25px;
-//                        position: relative;
-//                        button {
-//                            width: auto;
-//                            height: auto;
-//                            background: transparent;
-//                            position: absolute;
-//                            top: -50px;
-//                            right: 0;
-//                        }
-//                    }
-//                    .social {
-//                        a {
-//                            border: 1px solid $white;
-//                            height: 37px;
-//                            width: 37px;
-//                            color: $white;
-//                            display: inline-block;
-//                            text-align: center;
-//                            line-height: 37px;
-//                            margin-right: 20px;
-//                            transition: .3s ease-out;
-//                            &:hover {
-//                                color: $yellow;
-//                                border-color: $yellow;
-//                                transition: .3s ease-in;
-//                            }
-//                        }
-//                    }
-//                }
-//            }
-//        }
-//    }
-
-        &-team {
+    &-team {
         background: #fbfbfb;
         padding-top: 50px;
         .title {
@@ -164,101 +59,93 @@
             }
         }
         &-list {
-            &-item{
-            position: static;
-                margin-bottom: 55px;
-            &-user {
-                text-align: center;
-                text-transform: uppercase;
-                background: $white;
-                border-bottom: 2px solid #e1e6e6;
+            &-item {
                 position: static;
-                &-photo {
-                    display: block;
-                    width: 270px;
-                    height: 250px;
-                    overflow: hidden;
-                    margin-bottom: 10px;
-                    background-size: cover;
-                    background-position: top center;
-                    background-repeat: no-repeat;
-                }
-                h4 {
-                    color: $yellow;
-                    margin-bottom: 5px;
-                    display: inline-block;
-                    transition: .4s ease;
-                }
-                p {
-                    margin-bottom: 10px;
-                }
-                .about-team-item-hide {
-                    background: #131316;
-                    height: 300px;
-                    position: absolute;
-                    left: 0;
-                    right: 0;
-                    top: auto;
-                    margin-top: 60px;
-                    padding-top: 65px;
-                    display: none;
-                    text-align: left;
-                    overflow: hidden;
-                    transition: .3s ease;
-                    h4 {
-                        text-transform: uppercase;
-                        color: $yellow;
-                        font-weight: 500;
+                margin-bottom: 55px;
+                &-user {
+                    text-align: center;
+                    text-transform: uppercase;
+                    background: $white;
+                    border-bottom: 2px solid #e1e6e6;
+                    position: static;
+                    &-photo {
+                        display: block;
+                        width: 270px;
+                        height: 250px;
+                        overflow: hidden;
                         margin-bottom: 10px;
+                        background-size: cover;
+                        background-position: top center;
+                        background-repeat: no-repeat;
+                    }
+                    h4 {
+                        color: $yellow;
+                        margin-bottom: 5px;
+                        display: inline-block;
+                        transition: .4s ease;
                     }
                     p {
-                        line-height: 25px;
-                        color: $white;
-                        max-width: 770px;
-                        margin-bottom: 25px;
-                        position: relative;
-                        button {
-                            width: auto;
-                            height: auto;
-                            background: transparent;
-                            position: absolute;
-                            top: -50px;
-                            right: 0;
-                        }
+                        margin-bottom: 10px;
                     }
-                    .social {
-                        a {
-                            border: 1px solid $white;
-                            height: 37px;
-                            width: 37px;
+                }
+                .about-team-item-description {
+                        background: #131316;
+                        height: 300px;
+                        position: absolute;
+                        left: 0;
+                        right: 0;
+                        top: auto;
+                        margin-top: 60px;
+                        padding-top: 65px;
+                        text-align: left;
+                        overflow: hidden;
+                        transition: .3s ease;
+                    .container{
+                        max-width: 775px;
+                    }
+                        h4 {
+                            text-transform: uppercase;
+                            color: $yellow;
+                            font-weight: 500;
+                            margin-bottom: 10px;
+                        }
+                        p {
+                            line-height: 25px;
                             color: $white;
-                            display: inline-block;
-                            text-align: center;
-                            line-height: 37px;
-                            margin-right: 20px;
-                            transition: .3s ease-out;
-                            &:hover {
-                                color: $yellow;
-                                border-color: $yellow;
-                                transition: .3s ease-in;
+                            max-width: 770px;
+                            margin-bottom: 25px;
+                            position: relative;
+                            button {
+                                width: auto;
+                                height: auto;
+                                background: transparent;
+                                position: absolute;
+                                top: -50px;
+                                right: 0;
+                            }
+                        }
+                        .social {
+                            a {
+                                border: 1px solid $white;
+                                height: 37px;
+                                width: 37px;
+                                color: $white;
+                                display: inline-block;
+                                text-align: center;
+                                line-height: 37px;
+                                margin-right: 20px;
+                                transition: .3s ease-out;
+                                &:hover {
+                                    color: $yellow;
+                                    border-color: $yellow;
+                                    transition: .3s ease-in;
+                                }
                             }
                         }
                     }
-                }
             }
         }
     }
-    }
-
-
-
-
-
-
-
-
-
-
     &-skills {
         background: #131a1d;
         overflow: hidden;
@@ -279,6 +166,7 @@
             text-transform: uppercase;
             color: $yellow;
             margin-bottom: 60px;
+            vertical-align: top;
         }
     }
     &-clients {
@@ -302,6 +190,7 @@
         text-align: center;
         padding-top: 65px;
         padding-bottom: 95px;
+        min-height: 300px;
         &-item {
             height: 0;
             overflow: hidden;
