--- a/source/scss/base/contacts.scss
+++ b/source/scss/base/contacts.scss
@@ -62,6 +62,7 @@
             padding-left: 20px;
             margin-bottom: 30px;
             display: inline-block;
+            color: $white;
         }
         textarea {
             width: 100%;
@@ -73,6 +74,7 @@
             outline: none;
             padding: 20px;
             margin-bottom: 25px;
+            color: $white;
         }
         input[type="email"],
         input[type="text"], textarea {
