--- a/source/scss/base/footer.scss
+++ b/source/scss/base/footer.scss
@@ -5,11 +5,14 @@ footer {
     padding: 20px 0;
     p {
         margin-bottom: 20px;
-    }
-    span {
-        color: $yellow;
-    }
+
     a {
+        color: $yellow;
+        text-decoration: none;
+    }
+    }
+    .footer-social{
+        a {
         color: $white;
         margin: 0 10px;
         transition: .3s ease-out;
@@ -22,4 +25,5 @@ footer {
             transition: .3s ease-in;
         }
     }
+}
 }
