--- a/source/scss/base/header.scss
+++ b/source/scss/base/header.scss
@@ -10,21 +10,23 @@ header {
     .logo {
         float: left;
         height: 100%;
-            display: table;
-        a{
+        display: table;
+        a {
             line-height: 1;
-                display: table-cell;
+            display: table-cell;
             vertical-align: middle;
-            img{
-
+            img {
                 display: table-cell;
-            vertical-align: middle;
+                vertical-align: middle;
+                transition: .3s ease-in;
+                max-height: 60px;
             }
         }
     }
     .header-nav {
         float: right;
         line-height: 97px;
+        transition: .3s ease-in;
         height: 100%;
         li {
             position: relative;
@@ -69,6 +71,7 @@ header {
 }
 
 .burger-icon {
+    transition: .3s ease-in;
     position: absolute;
     z-index: 10;
     top: 30px;
@@ -78,6 +81,7 @@ header {
     cursor: pointer;
     display: none;
     z-index: 99999;
+    transition: .3s ease-in;
     .stripe1,
     .stripe2,
     .stripe3 {
@@ -103,9 +107,11 @@ header {
     overflow: hidden;
     header {
         .burger-icon {
+        transition: .3s ease-in;
             .stripe1,
             .stripe3 {
                 height: 3px;
+                transition: 4s ease-in;
                 transition: 4s ease-in;
             }
             .stripe1 {
@@ -130,13 +136,24 @@ header {
     }
 }
 
-.fixed-header{
-    height: 70px;
-    transition: .5 ease-in;
-    .header-nav{
-        line-height: 70px;
+.fixed-header {
+    height: 55px;
+    transition: .3s ease-in;
+    .logo a img {
+        max-height: 40px;
+        transition: .3s ease-in;
+    }
+    .header-nav {
+        line-height: 55px;
+        transition: .3s ease-in;
+    }
+    .burger-icon{
+        top: 20px;
+        transition: .3s ease-in;
+
     }
 }
+
 @keyframes burgerStripe1Rotate {
     30% {
         top: 7px;
